--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.1",
+    "react-native-calendars": "^1.1291.1",
     "react-native-confirmation-code-field": "7.3.1",
     "react-native-device-info": "^10.3.0",
     "react-native-gesture-handler": "2.7.0",
