--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/drawer": "6.5.0",
@@ -32,6 +33,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.0",
     "react-native-swiper": "1.6.0",
+    "react-native-toast-message": "^2.1.5",
     "react-redux": "8.0.5",
     "yarn": "^1.22.19"
   },
