--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/bottom-tabs": "6.4.0",
     "@react-navigation/drawer": "6.5.0",
@@ -19,23 +19,27 @@
     "@reduxjs/toolkit": "1.9.0",
     "@twotalltotems/react-native-otp-input": "1.3.11",
     "axios": "0.27.2",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.1",
     "react-native-calendars": "^1.1291.1",
-    "react-native-confirmation-code-field": "7.3.1",
+    "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-date-picker": "^4.2.6",
     "react-native-device-info": "^10.3.0",
     "react-native-gesture-handler": "2.7.0",
     "react-native-image-crop-picker": "0.38.1",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "2.6.2",
+    "react-native-otp-verify": "^1.1.4",
     "react-native-reanimated": "2.12.0",
+    "react-native-render-html": "6.3.4",
     "react-native-responsive-screen": "1.4.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.0",
     "react-native-swiper": "1.6.0",
-    "react-native-toast-message": "^2.1.5",
+    "react-native-toast-message": "2.1.5",
     "react-redux": "8.0.5",
-    "yarn": "^1.22.19"
+    "yarn": "1.22.19"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
