--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native-stack": "6.9.0",
     "@reduxjs/toolkit": "1.9.0",
     "@twotalltotems/react-native-otp-input": "1.3.11",
+    "accordion-collapse-react-native": "^1.1.1",
     "axios": "0.27.2",
     "moment": "^2.29.4",
     "react": "18.1.0",
@@ -26,16 +27,19 @@
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-date-picker": "^4.2.6",
     "react-native-device-info": "^10.3.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "2.7.0",
     "react-native-image-crop-picker": "0.38.1",
     "react-native-indicators": "^0.17.0",
     "react-native-linear-gradient": "2.6.2",
     "react-native-otp-verify": "^1.1.4",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "2.12.0",
     "react-native-render-html": "6.3.4",
     "react-native-responsive-screen": "1.4.2",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-swiper": "1.6.0",
     "react-native-toast-message": "2.1.5",
     "react-redux": "8.0.5",
