--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@twotalltotems/react-native-otp-input": "1.3.11",
     "accordion-collapse-react-native": "^1.1.1",
     "axios": "0.27.2",
+    "deprecated-react-native-prop-types": "^4.0.0",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.1",
