--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-swiper": "1.6.0",
     "react-native-toast-message": "2.1.5",
     "react-redux": "8.0.5",
+    "string-strip-html": "^13.0.2",
     "yarn": "1.22.19"
   },
   "devDependencies": {
